--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 #myCanvas {
-  background-image: url("https://static.wikia.nocookie.net/himym/images/f/f7/Tuckahoe_Funland.png/revision/latest?cb=20180317214220");
+  background-image: url("https://static.wikia.nocookie.net/himym/images/f/f7/Tuckahoe_Funland.png/revision/latest/scale-to-width-down/1000?cb=20180317214220");
   background-size: 600px 400px;
   border-radius: 10px;
   background-position: center;
