--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 #myCanvas {
-  background-image: url("https://static.wikia.nocookie.net/himym/images/f/f7/Tuckahoe_Funland.png/revision/latest/scale-to-width-down/1000?cb=20180317214220");
+  background-image: url("https://media.istockphoto.com/id/171337865/photo/ferris-wheel-at-night.jpg?s=612x612&w=0&k=20&c=bMwimKA29TYTuIuqOFUGQiYCmZ40GvlAAV4D_OolJJ8=");
   background-size: 600px 400px;
   border-radius: 10px;
   background-position: center;
